<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toggle_turn_on">NN:On</string>
    <string name="toggle_turn_off">NN:Off</string>
    <string name="toggle">Use NNAPI</string>

    <!--Button Name -->
    <!-- Button Name -->
    <string name="camera_btn">ক্যামেরা দিয়ে দেখুন</string>
    <string name="filepicker_btn"> রোগ সম্পর্কে জানুন</string>


    <!-- Image contentDescription -->
    <string name="welcome_img">Welcome Image</string>

    <!-- title-->
    <string name="apple_scab"> আপেলের স্ক্যাব রোগ </string>
    <string name="green_mould">  গ্রিন মোল্ড রোগ</string>

    <!-- subtitle-->
    <string name="apple_scab_sub1"> জৈব দ্বারা নিয়ন্ত্রণঃ </string>
    <string name="apple_scab_sub2"> রাসায়নিক নিয়ন্ত্রণঃ </string>
    <string name="green_mould_sub1"> জৈব দ্বারা নিয়ন্ত্রণঃ</string>
    <string name="green_mould_sub2"> রাসায়নিক নিয়ন্ত্রণঃ</string>


    <!-- details -->
    <string name="apple_det">যদি পুর্বের মৌসুমে রোগের মাত্রা বেশি ঽয়,তবে শীতকালীন সময়ে গাছের ছত্রাকের বৃদ্ধি রোধের জন্য তরল কপার ছত্রাকনাশক ছড়িয়ে দিতে ঽবে। আপেলের স্ক্যাবের বিরুদ্ধে সালফার আংশিক কার্যকর। গাছের বৃদ্ধির সময় সালফার এবং পাইরেথ্রিন ধারনকারী উপাদান ব্যবহার করে এ রোগের জৈব নিয়ন্ত্রণকরী তৈরি সম্ভব।  </string>
    <string name="apple_det1">কান্ডের ফাটা অংশের প্রতিরোধী কীটনাশক হিসেবে ডডিন, কাপ্তান ডাইনাথিওন প্রয়োগ করে রোগ প্রতিরোধ করা যায়। একবার স্ক্যাব শনাক্ত ঽলে, ডিফেনোকোনাজল, মাইকোবউট্যানিল বা সালফারের সংঘটিত উপাদান প্রয়োগ করে ছত্রাক বিকাশ রোধ করা যায়। বিভিন্ন রাসায়নিক গ্রুপ থেকে স্ক্যাব প্রতিরোধী কীটনাশক ব্যব্যহার করে ছত্রাকের সহনশীলতা রোধ করা হয়।  </string>
    <string name="green_del">সিউডোমোনাস সিরিঞ্জের ইএসসি-১০ স্ট্রেইন ভিত্তিক ফরমুলেশন করে ছত্রাক কে জৈব দমন করা সম্ভব। এগার্যান্টাম কনজিওইডিস গাছের নির্যাসও মোল্ডের বিরুদ্ধে কাজ করে। থাইমাস ক্যাপিট্যাটাস গুল্ম থেকে প্রাপ্ত একটি "অত্যাবশ্যকীয় তেল" এবং নিমের তেলও কার্যকর ফল দেয়। </string>
    <string name="green_del1">সাধারনত কিছু ছত্রাকনাশক ৪০-৫০ ডিগ্রি সেলসিয়াস তাপমাত্রার গরম পানিতে ডিটারজেন্ট মিশ্রণ বা দুর্বল ক্ষারের দ্রবণে ধুয়ে নিলে ফলে ক্ষয় হ্রাস পায়। ইমাজালিল, থাইবেন্ডাজল এবং বাইফেনল ছত্রাক নাশক ব্যবহারের পরামর্শ রয়েছে।</string>
</resources>
